// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTable Row should render properly with dark theme 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 0.8rem;
  margin-bottom: 0.8rem;
  background-color: white;
  -webkit-transition: box-shadow 100ms ease-out;
  transition: box-shadow 100ms ease-out;
  border: 0.1rem solid #ffffff;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem rgba(176,188,200,0.6);
}

.c0:nth-child(odd) {
  background: #ffffff;
}

.c0:nth-child(even) {
  background: #ffffff;
}

<div>
  <table>
    <tbody>
      <tr
        class="c0"
      >
        <td>
          Demo
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CardTable Row should render properly with light theme 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 0.8rem;
  margin-bottom: 0.8rem;
  background-color: white;
  -webkit-transition: box-shadow 100ms ease-out;
  transition: box-shadow 100ms ease-out;
  border: 0.1rem solid #dfe4e9;
  box-shadow: none;
}

.c0:hover {
  box-shadow: 0px 0.2rem 0.4rem rgba(176,188,200,0.6);
}

.c0:nth-child(odd) {
  background: #F7F8F9;
}

.c0:nth-child(even) {
  background: #ffffff;
}

<div>
  <table>
    <tbody>
      <tr
        class="c0"
      >
        <td>
          Demo
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
